[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssutxos"
version = "1.0.0"
description = "A CLI tool to inspect and compare SideSwap UTXOs on Liquid."
readme = "README.md"
authors = [
    { name = "Lucky", email = "lucky.bear.dev@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "typer>=0.9",
    "requests>=2.31",
]

[project.scripts]
ssutxos = "ssutxos.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssutxos*"]
